# microservice_python

./: .env  Dockerfile  README.md  create_table.py  docker-compose.yml  main.py  pyproject.toml  schema.py  yoyo.ini
app/: main.py
app/db/: base.py  models.py
config/: config.py
core/: auth.py  config.py  deps.py  security.py
migrations/: 20230802_01_hSWJO.py  20230807_01_VLWrk.sql
models/: model.py
